cabal-version:      2.4
name:               focus-timer
version:            0.2.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pablo Virgo
maintainer:         mailbox@pablovirgo.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library helpers
    exposed-modules: Helpers
    default-language: Haskell2010
    build-depends:
        base ^>=4.13.0.0
        , text ^>=1.2
    hs-source-dirs: lib

executable focus-timer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.13.0.0
        , async ^>=2.2
        , bytestring ^>=0.10
        , time ^>=1.9
        , pipes ^>= 4.3
        , text ^>=1.2
        , gi-gdk ^>=3.0
        , gi-gtk ^>=3.0
        , gi-gtk-declarative ^>=0.7.1
        , gi-gtk-declarative-app-simple ^>=0.7.1
        , helpers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded

test-suite test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: test.hs
    build-depends: base >= 4 && < 5
        , tasty >= 1.4
        , tasty-hunit >= 0.10
        , helpers
